--- a/01.INTRODUCCION.md
+++ b/01.INTRODUCCION.md
@@ -6,3 +6,15 @@ JavaScript fue inventado por Brendan Eich en 1995, y se convirtió en un estánd
 
 ECMA-262 es el nombre oficial de la norma. ECMAScript es el nombre oficial del lenguaje.
 
+## Ediciones de ECMAScript
+
+| Año	 | Nombre         | Descripción
+|------|----------------|-----------------------------------------------
+| 1997 | ECMAScript 1   | First Edition.
+| 1998 | ECMAScript 2   | Editorial changes only.
+| 1999 | ECMAScript 3   | Added Regular Expressions. Added try/catch.
+|      | ECMAScript 4	  | Was never released.
+| 2009 | ECMAScript 5	  | Added "strict mode". Added JSON support.
+| 2011 | ECMAScript 5.1 | Editorial changes.
+| 2015 | ECMAScript 6   | Added classes and modules.
+| 2016 | ECMAScript 7   | Added exponential operator (\*\*). Added Array.prototype.includes.
