--- a/01.INTRODUCCION.md
+++ b/01.INTRODUCCION.md
@@ -8,13 +8,28 @@ ECMA-262 es el nombre oficial de la norma. ECMAScript es el nombre oficial del l
 
 ## Ediciones de ECMAScript
 
-| Año	 | Nombre         | Descripción
-|------|----------------|-----------------------------------------------
-| 1997 | ECMAScript 1   | First Edition.
-| 1998 | ECMAScript 2   | Editorial changes only.
-| 1999 | ECMAScript 3   | Added Regular Expressions. Added try/catch.
-|      | ECMAScript 4	  | Was never released.
-| 2009 | ECMAScript 5	  | Added "strict mode". Added JSON support.
-| 2011 | ECMAScript 5.1 | Editorial changes.
-| 2015 | ECMAScript 6   | Added classes and modules.
-| 2016 | ECMAScript 7   | Added exponential operator (\*\*). Added Array.prototype.includes.
+| Año	 | Nombre         | Otros nombres | Descripción
+|------|----------------|---------------|--------------------------------
+| 1997 | ECMAScript 1   | ES1           | Primera publicación.
+| 1998 | ECMAScript 2   | ES2           | Solo cambios editoriales.
+| 1999 | ECMAScript 3   | ES3           | Regular Expressions. try/catch.
+|      | ECMAScript 4	  | ES4           | Nunca fue publicada.
+| 2009 | ECMAScript 5	  | ES5           | "strict mode". JSON support.
+| 2011 | ECMAScript 5.1 | ES5.1         | Cambios editoriales.
+| 2015 | ECMAScript 6   | ES6, ES2015   | Classes, modules.
+| 2016 | ECMAScript 7   | ES7, ES2016   | Exponential operator (\*\*). Array.prototype.includes.
+| 2017 | ECMAScript 8   | ES8, ES2017   | String padding, Object.values, Object.entries, Async functions, ...
+
+De especial importancia es **ES6 o ES2015**.
+
+
+
+
+
+
+
+
+# Referencias
+
+- [[en inglés] Características nuevas en ES2017 ](https://hackernoon.com/es8-was-released-and-here-are-its-main-new-features-ee9c394adf66)
+- [[en inglés] Información en Wikipedia](https://en.wikipedia.org/wiki/ECMAScript)
