--- a/01.INTRODUCCION.md
+++ b/01.INTRODUCCION.md
@@ -1,10 +1,10 @@
 # Historia
 
-JavaScript y Java son lenguajes completamente diferentes, tanto en concepto como en diseño.
+**JavaScript y Java son lenguajes completamente diferentes, tanto en concepto como en diseño**.
 
-JavaScript fue inventado por Brendan Eich en 1995, y se convirtió en un estándar ECMA en 1997.
+JavaScript fue inventado por Brendan Eich en 1995, y **se convirtió en un estándar ECMA en 1997**.
 
-ECMA-262 es el nombre oficial de la norma. ECMAScript es el nombre oficial del lenguaje.
+**ECMA-262** es el nombre oficial de la norma. ECMAScript es el nombre oficial del lenguaje.
 
 ## Ediciones de ECMAScript
 
