--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -3,3 +3,15 @@
 
 # Tipos de datos
 
+# Objetos
+
+```javascript
+var x1 = new Object();    // A new Object object
+var x2 = new String();    // A new String object
+var x3 = new Number();    // A new Number object
+var x4 = new Boolean();   // A new Boolean object
+var x5 = new Array();     // A new Array object
+var x6 = new RegExp();    // A new RegExp object
+var x7 = new Function();  // A new Function object
+var x8 = new Date();      // A new Date object
+```
