--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -1,7 +1,44 @@
 # Características
 
 
-# Tipos de datos
+# Tipos de datos primitivos
+
+- Números
+- Texto
+- Booleanos
+
+Código JS
+
+```javascript
+var a;
+typeof a;
+
+a = 23;
+typeof a;
+
+a = 23.01;
+typeof a;
+
+a = true;
+typeof a;
+
+a = 'hola mundo';
+typeof a;
+``` 
+
+
+Resultado
+
+```
+"undefined"
+"number"
+"number"
+"boolean"
+"string"
+```
+
+
+
 
 # Objetos
 
@@ -15,3 +52,10 @@ var x6 = new RegExp();    // A new RegExp object
 var x7 = new Function();  // A new Function object
 var x8 = new Date();      // A new Date object
 ```
+
+
+
+
+# Referencias
+
+-[[en inglés] Objetos](https://www.w3schools.com/js/js_object_definition.asp)
