--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -37,7 +37,46 @@ Resultado
 "string"
 ```
 
-## Texto en Unicode
+## Texto
+
+Existen 3 formas distintas de expresar un literal de texto:
+
+```javascript
+"Esto es una cadena de texto"
+'Esto es una cadena de texto'
+`Esto es una cadena de texto`
+```
+
+Las 2 primeras son equivalentes. Es aconsejable utilizar siempre la misma forma.
+
+```javascript
+'Y me dijo: "Hola" '
+"La variable 'x' no está definida"
+```
+
+La tercera forma se conoce como `template string` y fue introducida con ES2015. Permite mostrar valor de variables y ejecutar código javascript sin tener que salir de la cadena de texto. 
+
+
+Ejemplo usando `template string`
+
+```javascript
+var x = 5;
+
+console.log ( `La variable 'x' vale ${x} unidades` );
+console.log ( `El cubo de 'x' es ${Math.pow(5,3)} unidades` );
+```
+
+Ejemplo tradicional usando operador +
+
+```javascript
+var x = 5;
+
+console.log ( "La variable 'x' vale "  + x + " unidades" );
+console.log ( "El cubo de 'x' es " + Math.pow(5,3) + " unidades" );
+```
+
+
+## Texto Unicode
 
 
 
