--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -47,14 +47,14 @@ Existen 3 formas distintas de expresar un literal de texto:
 `Esto es una cadena de texto`
 ```
 
-Las 2 primeras son equivalentes. Es aconsejable utilizar siempre la misma forma.
+Las 2 primeras son equivalentes. 
 
 ```javascript
 'Y me dijo: "Hola" '
 "La variable 'x' no está definida"
 ```
 
-La tercera forma se conoce como `template string` y fue introducida con ES2015. Permite mostrar valor de variables y ejecutar código javascript sin tener que salir de la cadena de texto. 
+La tercera forma se conoce como `template string` y fue introducida con ES2015. Permite mostrar el valor de variables y ejecutar código javascript sin tener que salir de la cadena de texto. 
 
 
 Ejemplo usando `template string`
