--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -1,7 +1,15 @@
 # Características
 
+- lenguaje interpretado
+- lenguaje con tipado dinámico
+- lenguaje multiparadigma:
+  - funcional
+  - basado en prototipos
+  - con soporte para objetos
+- soporta ejecución asíncrona
 
-# Tipos de datos primitivos
+
+# Tipos de datos primitivos simples
 
 - Números (enteros y reales)
 - Texto
@@ -78,6 +86,8 @@ console.log ( "El cubo de 'x' es " + Math.pow(5,3) + " unidades" );
 
 ## Texto Unicode
 
+
+# Tipos de datos primitivos compuestos
 
 
 # Objetos
