--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -74,7 +74,7 @@ console.log ( `La variable 'x' vale ${x} unidades` );
 console.log ( `El cubo de 'x' es ${Math.pow(5,3)} unidades` );
 ```
 
-Ejemplo tradicional usando operador +
+Ejemplo tradicional usando operador de concatenación `+`
 
 ```javascript
 var x = 5;
