--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -19,19 +19,19 @@ Código JS
 
 ```javascript
 var a;
-typeof a;
+typeof a;   // undefined
 
 a = 23;
-typeof a;
+typeof a;   // number
 
-a = 23.01;
-typeof a;
+a = 23.01;  
+typeof a;   // number 
 
-a = true;
-typeof a;
+a = true; 
+typeof a;   // boolean
 
 a = 'hola mundo';
-typeof a;
+typeof a;   // string
 ``` 
 
 
@@ -88,6 +88,55 @@ console.log ( "El cubo de 'x' es " + Math.pow(5,3) + " unidades" );
 
 
 # Tipos de datos primitivos compuestos
+
+Javascript trata a ambos como objetos
+
+- Arrays  `[   ]`
+- Objetos  `{   }`
+
+## Arrays
+
+Colección de valores separados por comas y dentro de corchetes.
+En Javascript, a diferencia de otros lenguajes, los valores no tienen por que ser del mismo tipo.
+
+Código JS
+
+```javascript
+var a;
+
+a = [ 1, "jola", true ]; 
+
+typeof a;              // object
+a instanceof Array;    // true
+
+a = [ 1, 200, 23 ]; 
+
+typeof a;              // object
+a instanceof Array;    // true 
+```
+
+Resultado
+
+```
+true
+true
+```
+
+## Objetos
+
+Colección de claves:valores separados por comas y dentro de llaves.
+
+Código JS
+
+```javascript
+var persona;
+
+persona = { nombre : 'José', edad : 30, altura: 170 };
+
+typeof persona;              // object
+persona instanceof Array;    // false
+```
+
 
 
 # Objetos
