--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -29,7 +29,7 @@ typeof a;   // number
 a = true; 
 typeof a;   // boolean
 
-a = 'hola mundo';
+a = "hola mundo";
 typeof a;   // string
 ``` 
 
@@ -92,15 +92,20 @@ En Javascript, a diferencia de otros lenguajes, los valores no tienen por que se
 ```javascript
 var a;
 
-a = [ 1, "jola", true ]; 
+a = [ 100, 200, 23 ]; 
+
+typeof a;              // object
+a instanceof Array;    // true 
+
+a = [ 100, "jola", true ]; 
 
 typeof a;              // object
 a instanceof Array;    // true
 
-a = [ 1, 200, 23 ]; 
-
-typeof a;              // object
-a instanceof Array;    // true 
+// Los elementos están indexados, empezando en 0
+a[0]   // 100
+a[1]   // "jola"
+a[2]   // true
 ```
 
 
@@ -111,10 +116,15 @@ Colección de claves:valores separados por comas y dentro de llaves.
 ```javascript
 var persona;
 
-persona = { nombre : 'José', edad : 30, altura: 170 };
+persona = { nombre : "José", edad : 30, altura: 170 };
 
 typeof persona;              // object
 persona instanceof Array;    // false
+
+// Propiedades del objeto
+persona.nombre   // "José"
+persona.edad     // 30
+persona.altura   // 170
 ```
 
 
