--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -78,7 +78,7 @@ console.log ( "El cubo de 'x' es " + Math.pow(5,3) + " unidades" );
 
 # Tipos de datos primitivos compuestos
 
-Javascript trata a ambos como objetos
+**Javascript trata a ambos como objetos**.
 
 - Arrays  `[   ]`
 - Objetos  `{   }`
@@ -111,12 +111,12 @@ a[2]   // true
 
 ## Objetos
 
-Colección de claves:valores separados por comas y dentro de llaves.
+Colección de clave:valor separados por comas y dentro de llaves.
 
 ```javascript
 var persona;
 
-persona = { nombre : "José", edad : 30, altura: 170 };
+persona = { nombre:"José",  edad:30,  altura:170 };
 
 typeof persona;              // object
 persona instanceof Array;    // false
@@ -132,19 +132,51 @@ persona.altura   // 170
 # Objetos
 
 ```javascript
-var x1 = new Object();    // A new Object object
-var x2 = new String();    // A new String object
-var x3 = new Number();    // A new Number object
-var x4 = new Boolean();   // A new Boolean object
-var x5 = new Array();     // A new Array object
-var x6 = new RegExp();    // A new RegExp object
-var x7 = new Function();  // A new Function object
-var x8 = new Date();      // A new Date object
+var a = new Number();    // objeto de clase Number. A evitar. Debe usarse el tipo primitivo.
+var b = new Boolean();   // objeto de clase Boolean. A evitar. Debe usarse el tipo primitivo.
+var c = new String();    // objeto de clase String. A evitar. Debe usarse el tipo primitivo.
+var d = new Array();     // objeto de clase Array. A evitar. Debe usarse el tipo primitivo.
+var e = new Date();      // objeto de clase Date.
+var f = new RegExp();    // objeto de clase RegExp.
+var g = new Function();  // objeto de clase Function.
+var h = new Object();    // objeto de clase Object genérico.
 ```
+
+## Arrays
+
+**Algunos métodos interesantes**
+
+```javascript
+var numeros = []; 
+
+numeros.lenght;                       // 0
+
+numeros.push (100);                   // [ 100 ]
+numeros.push (20, 10);                // [ 100, 20, 10 ]
+
+var n = numeros.push (1, 1, 2, 2, 2); // [ 100, 20, 10, 1, 1, 2, 2, 2 ],  n=8 ( es la longitud )
+var z = numeros.pop ();               // [ 100, 20, 10, 1, 1, 2, 2 ],  z=2 ( es el elemento extraido )
+
+numeros.sort();                       // [1, 1, 10, 100, 2, 2, 20]
+numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
+```
+
+> NOTA: los métodos sort() y reverse() realizan una ordenación alfábetica.
+
+```javascript
+// ordenación númerica
+
+numeros.sort( function(a, b){return a-b} );
+numeros.reverse( function(a, b){return a-b} );
+
+// function(a, b){return a-b} ) es la función que se usará para comparar dos valores.
+```
+
+
 
 
 
 
 # Referencias
 
--[[en inglés] Objetos](https://www.w3schools.com/js/js_object_definition.asp)
+-[[en inglés] Objetos](https://www.w3schools.com/js/js_objects.asp)
