--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -172,6 +172,13 @@ numeros.reverse( function(a, b){return a-b} );  // [100, 20, 10, 2, 2, 2, 1, 1]
 // function(a, b){return a-b} ) es la función que se usará para comparar dos valores.
 ```
 
+> ACTIVIDAD PROPUESTA:
+  
+  - ¿Qué método utilizaremos para insertar un elemento al principio del array?
+  - ¿Qué método utilizaremos para extraer un elemento del principio del array?
+  
+  Puedes consultar [este enlace](https://www.w3schools.com/jsref/jsref_obj_array.asp)
+  
 
 
 
