--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -173,11 +173,11 @@ numeros.reverse( function(a, b){return a-b} );  // [100, 20, 10, 2, 2, 2, 1, 1]
 ```
 
 > ACTIVIDAD PROPUESTA:
-  
-  - ¿Qué método utilizaremos para insertar un elemento al principio del array?
-  - ¿Qué método utilizaremos para extraer un elemento del principio del array?
-  
-  Puedes consultar [este enlace](https://www.w3schools.com/jsref/jsref_obj_array.asp)
+>  
+>  - ¿Qué método utilizaremos para insertar un elemento al principio del array?
+>  - ¿Qué método utilizaremos para extraer un elemento del principio del array?
+>  
+>  Puedes consultar [este enlace](https://www.w3schools.com/jsref/jsref_obj_array.asp)
   
 
 
