--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -138,8 +138,8 @@ var c = new String();    // objeto de clase String. A evitar. Debe usarse el tip
 var d = new Array();     // objeto de clase Array. A evitar. Debe usarse el tipo primitivo.
 var e = new Date();      // objeto de clase Date.
 var f = new RegExp();    // objeto de clase RegExp.
-var g = new Function();  // objeto de clase Function.
-var h = new Object();    // objeto de clase Object genérico.
+var g = new Function();  // objeto de clase Function. No suele usarse.
+var h = new Object();    // objeto de clase Object genérico. No suele usarse.
 ```
 
 ## Arrays
