--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -26,6 +26,9 @@ typeof a;   // number
 a = 23.01;  
 typeof a;   // number 
 
+a = 0xff;
+typeof a;   //number, valor decimal: 255    
+
 a = true; 
 typeof a;   // boolean
 
@@ -74,6 +77,38 @@ console.log ( "El cubo de 'x' es " + Math.pow(5,3) + " unidades" );
 
 
 ## Texto Unicode
+
+
+## Conversión entre texto y números
+
+```javascript 
+var a = "12";       // es string
+var b = "23.01";    // es string
+var c = 50;         // es number
+
+console.log ( c + c );  // 100
+
+console.log ( c + a );             // 5012
+console.log ( c + parseInt(a) );   // 62 
+
+console.log ( a + b );             // 1223.01
+console.log ( c + parseFloat(b) ); // 73.01 
+
+c.toString();       // "50" es string
+```
+
+> ACTIVIDAD PROPUESTA:
+>  
+>  - Ejecuta las siguientes sentencias y explica que es lo que hacen:
+>    
+>    var a = "FF";
+>    var b = "1010";
+>
+>    parseInt (a, 16);
+>    parseInt (b, 2);  
+>    parseInt (b, 3);
+>    parseInt (b, 10);
+
 
 
 # Tipos de datos primitivos compuestos
