--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -97,18 +97,17 @@ console.log ( c + parseFloat(b) ); // 73.01
 c.toString();       // "50" es string
 ```
 
-> ACTIVIDAD PROPUESTA:
->  
->  - Ejecuta las siguientes sentencias y explica que es lo que hacen:
->    
->    var a = "FF";
->    var b = "1010";
->
->    parseInt (a, 16);
->    parseInt (b, 2);  
->    parseInt (b, 3);
->    parseInt (b, 10);
+> ACTIVIDAD PROPUESTA: Ejecuta las siguientes sentencias y explica que es lo que hacen:
+```javascript
+    var a = "FF";
+    var b = "1010";
 
+    parseInt (a, 16);
+    
+    parseInt (b, 2);  
+    parseInt (b, 3);
+    parseInt (b, 10);
+```
 
 
 # Tipos de datos primitivos compuestos
