--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -98,16 +98,16 @@ c.toString();       // "50" es string
 ```
 
 > ACTIVIDAD PROPUESTA: Ejecuta las siguientes sentencias y explica que es lo que hacen:
-```javascript
-    var a = "FF";
-    var b = "1010";
-
-    parseInt (a, 16);
-    
-    parseInt (b, 2);  
-    parseInt (b, 3);
-    parseInt (b, 10);
-```
+>```javascript
+>    var a = "FF";
+>    var b = "1010";
+>
+>    parseInt (a, 16);
+>    
+>    parseInt (b, 2);  
+>    parseInt (b, 3);
+>    parseInt (b, 10);
+>```
 
 
 # Tipos de datos primitivos compuestos
