--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -196,15 +196,15 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 ```
 
 > NOTA: los métodos `sort()` y `reverse()` realizan una ordenación alfábetica.
-
-```javascript
-// para realizar una ordenación númerica pasamos una función de comparación
-
-numeros.sort( function(a, b){return a-b} );     // [1, 1, 2, 2, 10, 20, 100]  
-numeros.reverse( function(a, b){return a-b} );  // [100, 20, 10, 2, 2, 2, 1, 1]
-
-// function(a, b){return a-b} ) es la función que se usará para comparar dos valores.
-```
+>
+>```javascript
+>// para realizar una ordenación númerica pasamos una función de comparación>>
+>
+>numeros.sort( function(a, b){return a-b} );     // [1, 1, 2, 2, 10, 20, 100]  
+>numeros.reverse( function(a, b){return a-b} );  // [100, 20, 10, 2, 2, 2, 1, 1]
+>
+>// function(a, b){return a-b} ) es la función que se usará para comparar dos valores.
+>```
 
 > ACTIVIDAD PROPUESTA:
 >  
