--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -112,10 +112,10 @@ c.toString();       // "50" es string
 
 # Tipos de datos primitivos compuestos
 
-**Javascript trata a ambos como objetos**.
-
 - Arrays  `[   ]`
 - Objetos  `{   }`
+
+**Javascript trata a ambos como objetos**.
 
 ## Arrays
 
@@ -213,7 +213,11 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 >  
 >  Puedes consultar [este enlace](https://www.w3schools.com/jsref/jsref_obj_array.asp)
   
+## Date
 
+## RegEx
+
+## Encadenamiento de métodos
 
 
 
