--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -140,6 +140,9 @@ a instanceof Array;    // true
 a[0]   // 100
 a[1]   // "jola"
 a[2]   // true
+
+// para mostrarlos por pantalla con bucle for in
+for (var i in a)  console.log (i + " --->  " + a[i]);
 ```
 
 
@@ -159,6 +162,9 @@ persona instanceof Array;    // false
 persona.nombre   // "José"
 persona.edad     // 30
 persona.altura   // 170
+
+// para mostrarlos por pantalla con bucle for in
+for (var i in persona)  console.log (i + " --->  " + persona[i]);
 ```
 
 
