--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -142,7 +142,7 @@ a[1]   // "jola"
 a[2]   // true
 
 // para mostrarlos por pantalla con bucle for in
-for (var i in a)  console.log (i + " --->  " + a[i]);
+for (var i in a)  console.log (i + " ---> " + a[i]);
 ```
 
 
@@ -163,8 +163,8 @@ persona.nombre   // "José"
 persona.edad     // 30
 persona.altura   // 170
 
-// para mostrarlos por pantalla con bucle for in
-for (var i in persona)  console.log (i + " --->  " + persona[i]);
+// para mostrarlas por pantalla con bucle for in
+for (var i in persona)  console.log (i + " ---> " + persona[i]);
 ```
 
 
