--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -171,16 +171,34 @@ for (var i in persona)  console.log (i + " ---> " + persona[i]);
 
 # Objetos
 
+- Es aconsejable inicializar los objetos cuando se crean. 
+- El constructor hace esta tarea, pero en Javascript es preferible hacerlo sin usar el constructor.
+
 ```javascript
+// formas permitidas, pero no recomendadas, excepto para Date()
+
 var a = new Number();    // objeto de clase Number. A evitar. Debe usarse el tipo primitivo.
 var b = new Boolean();   // objeto de clase Boolean. A evitar. Debe usarse el tipo primitivo.
 var c = new String();    // objeto de clase String. A evitar. Debe usarse el tipo primitivo.
 var d = new Array();     // objeto de clase Array. A evitar. Debe usarse el tipo primitivo.
 var e = new Date();      // objeto de clase Date.
-var f = new RegExp();    // objeto de clase RegExp.
-var g = new Function();  // objeto de clase Function. No suele usarse.
-var h = new Object();    // objeto de clase Object genérico. No suele usarse.
+var f = new RegExp();    // objeto de clase RegExp. A evitar.
+var g = new Function();  // objeto de clase Function. A evitar.
+var h = new Object();    // objeto de clase Object genérico. A evitar.
 ```
+
+```javascript
+// formas recomendadas
+
+var a = 0;               // número primitivo
+var b = false;           // booleano primitivo
+var c = "";              // texto primitivo
+var d = [];              // objeto array  
+var f = /()/;            // objeto regexp
+var g = function(){};    // objeto function
+var h = {};              // objeto object
+```
+
 
 ## Arrays
 
