--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -27,7 +27,13 @@ a = 23.01;
 typeof a;   // number 
 
 a = 0xff;
-typeof a;   //number, valor decimal: 255    
+typeof a;   //number, hexadecimal, valor decimal: 255    
+
+a = 0o77;
+typeof a;   //number, octal, valor decimal: 63    
+
+a = 0b1111;
+typeof a;   //number, binario, valor decimal: 15    
 
 a = true; 
 typeof a;   // boolean
