--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -115,6 +115,16 @@ c.toString();       // "50" es string
 >    parseInt (b, 10);
 >```
 
+## Operadores
+
+```javascript 
+var a = 11;
+var b = "11";
+
+a == b;   // true
+a === b;  // false
+```
+
 
 # Tipos de datos primitivos compuestos
 
