--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -183,9 +183,12 @@ persona.altura   // 170
 for (var i in persona)  console.log (i + " ---> " + persona[i]);
 ```
 
+# Funciones
 
 
 # Objetos
+
+En este apartado profundizamos en el trabajo con objetos.
 
 - Es aconsejable inicializar los objetos cuando se crean. 
 - El constructor hace esta tarea, pero en Javascript es preferible hacerlo sin usar el constructor.
@@ -253,11 +256,56 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 >  
 >  Puedes consultar [este enlace](https://www.w3schools.com/jsref/jsref_obj_array.asp)
   
+Tres métodos muy interesantes para trabajar con arrays, y para objetos también, son:
+
+- `map` : Realiza una operación para cada uno de los elementos
+- `filter` : Filtra los elementos deseados
+- `reduce` : Reduce los elementos a un valor
+
+```javascript
+// Ejemplos
+
+var numeros = [ 1, 4, 2, 3, 5, 2, 1 ];
+var cuadrados = [];
+var filtrados = [];
+var suma = [];
+
+// Utilizando map para calcular el cuadrado de cada elemento
+cuadrados = numeros.map( n => n * n );        // cuadrados = [ 1, 16, 4, 9, 25, 4, 1 ]  
+
+// Utilizando filter para filtrar los elementos mayores que 2
+filtrados = numeros.filter ( n => n > 2 );     // filtrados = [ 4, 3, 5 ]
+
+// Utilizando reduce para sumar los elementos
+suma = numeros.reduce ( (previo, actual) => previo + actual,  0);  // suma = 18  (0 + 1 + 4 + 2 + 3 + 5 + 2 + 1 ) 
+```
+
+> NOTA: 
+>
+> - Los métodos `map`, `filter` y `reduce` reciben como primer parámetro una función callback. En este caso la hemos expresado como arrow function para simplificar el código.
+> - El método `reduce` recibe un segundo parámetro que será el primer valor a utilizar.
+
+
+
+> ACTIVIDAD PROPUESTA:
+>
+> - ¿Qué resultado obtenemos si ejecutamos las siguientes sentencias? 
+>
+> ```javascript
+>    var resultado = [];
+>    
+>    resultado = filtrados.reduce ( (previo, actual) => previo + actual,  10);
+>    resultado = filtrados.reduce ( (previo, actual) => previo * actual,  1);
+>```
+
+
+## Encadenamiento de métodos
+
+
+  
 ## Date
 
 ## RegEx
-
-## Encadenamiento de métodos
 
 
 
@@ -265,3 +313,4 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 # Referencias
 
 -[[en inglés] Objetos](https://www.w3schools.com/js/js_objects.asp)
+-[Map, Filter y Reduce](http://blog.builtbyedgar.com/javascript-map-filter-y-reduce-para-dummies/)
