--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -277,7 +277,8 @@ cuadrados = numeros.map( n => n * n );        // cuadrados = [ 1, 16, 4, 9, 25, 
 filtrados = numeros.filter ( n => n > 2 );     // filtrados = [ 4, 3, 5 ]
 
 // Utilizando reduce para sumar los elementos
-suma = numeros.reduce ( (previo, actual) => previo + actual,  0);  // suma = 18  (0 + 1 + 4 + 2 + 3 + 5 + 2 + 1 ) 
+suma = numeros.reduce ( (previo, actual) => previo + actual,  0); 
+// suma = 18  (0 + 1 + 4 + 2 + 3 + 5 + 2 + 1 ) 
 ```
 
 > NOTA: 
@@ -292,7 +293,7 @@ suma = numeros.reduce ( (previo, actual) => previo + actual,  0);  // suma = 18 
 > - ¿Qué resultado obtenemos si ejecutamos las siguientes sentencias? 
 >
 > ```javascript
->    var resultado = [];
+>    var resultado;
 >    
 >    resultado = filtrados.reduce ( (previo, actual) => previo + actual,  10);
 >    resultado = filtrados.reduce ( (previo, actual) => previo * actual,  1);
@@ -301,8 +302,77 @@ suma = numeros.reduce ( (previo, actual) => previo + actual,  0);  // suma = 18 
 
 ## Encadenamiento de métodos
 
+El encadenamiento de métodos es una técnica donde aplicamos a un objeto un método. A su vez al objeto resultante se le aplica otro método. Y así sucesivamente. Nos ahorramos así el declaración de objetos intermedios y el código se simplifica.
 
-  
+Como requisito debemos asegurarmos que el método que aplicamos es adecuado al objeto de trabajo.
+
+```javascript
+// Ejemplo: Calculamos el doble de cada número, luego filtramos los menores de 5 y después los sumamos
+
+resultado = numeros.map ( n => 2 * n ).filter ( n => n < 5 ).reduce ( (previo, actual) => previo + actual, 0);
+
+// El resultado es 12
+//
+// - Doble de cada número: [2, 8, 4, 6, 10, 4, 2]
+// - Filtro de menores de 5: [2, 4, 4, 2]
+// - Suma de ellos: 12
+```
+
+```javascript
+// Mismo ejemplo anterior. Para mayor legibilidad suele indicarse cada método en una línea separada
+// y normalmente el punto (.) suele iniciar la línea.
+
+resultado = numeros.map    ( n => 2 * n )
+                   .filter ( n => n < 5 )
+                   .reduce ( (previo, actual) => previo + actual, 0);
+```
+
+
+**Explicación**:
+
+- La operación `numeros.map ( n => 2 * n )` nos devuelve el objeto literal `[2, 8, 4, 6, 10, 4, 2]`.
+- Aplicamos entonces la operación `[2, 8, 4, 6, 10, 4, 2].filter ( n => n < 5 )` y obtenemos el objeto literal `[2, 4, 4, 2]`.
+- Aplicamos después la operación `[2, 4, 4, 2].reduce ( (previo, actual) => previo + actual, 0)` y obtenemos `55`.
+- Por último el resultado `55` se guarda en la variable `resultado`.
+
+
+Si no hubieses empleado encadenamiento de métodos, el código sería el siguiente:
+
+```javascript
+
+var resultado1 = numeros.map ( n => 2 * n );
+var resultado2 = resultado1.filter ( n => n < 5 );
+var resultado3 = resultado2.reduce ( (previo, actual) => previo + actual, 0);
+
+// resultado final en resultado3
+```
+
+El encadenamiento de métodos es una técnica que podemos utilizar siempre que sea posible y lo deseemos. Suele utilizarse frecuentemente con jQuery.
+
+
+> ACTIVIDAD PROPUESTA:
+>
+> - ¿Qué resultado obtenemos si ejecutamos el siguiente código? 
+>
+>```javascript
+>
+>var desarrolladores = [
+>  { nombre: 'Juan', tipo: 'móvil', edad: 24 },
+>  { nombre: 'Inma', tipo: 'móvil', edad: 31 },
+>  { nombre: 'Ana',  tipo: 'web',   edad: 25 },
+>  { nombre: 'Eva',  tipo: 'web',   edad: 30 },
+>  { nombre: 'José', tipo: 'móvil', edad: 33 }
+>];
+>
+>
+>var sumaEdadWeb = desarrolladores
+>                .filter ( x => x.tipo === 'web')
+>                .map    ( x => x.edad)
+>                .reduce ((previo, actual) => previo + actual, 0);
+>```
+
+
+ 
 ## Date
 
 ## RegEx
