--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -103,7 +103,7 @@ console.log ( c + parseFloat(b) ); // 73.01
 c.toString();       // "50" es string
 ```
 
-> ACTIVIDAD PROPUESTA: Ejecuta las siguientes sentencias y explica que es lo que hacen:
+> ACTIVIDAD PROPUESTA: Ejecuta las siguientes sentencias y explica que hacen:
 >```javascript
 >    var a = "FF";
 >    var b = "1010";
@@ -371,11 +371,13 @@ El encadenamiento de métodos es una técnica que podemos utilizar siempre que s
 >                 .reduce ((previo, actual) => previo + actual, 0);
 >```
 
-
+> ACTIVIDAD PROPUESTA:
+>
+> - En lugar de calcular la suma de edades de los desarrolladores web, ¿cómo calcularíamos la media de edad de los desarrolladores web? 
  
 ## Date
 
-## RegEx
+## RegExp
 
 
 
