--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -389,10 +389,10 @@ var fecha = new Date(año, mes, día, hora, minutos, segundos, milisegundos)
 ```javascript 
 // Ejemplos
 
-var f1 = new Date(2017, 00, 01, 22, 30, 00, 999);
-var f2 = new Date(2017, 00, 01, 22, 30, 00);
-var f3 = new Date(2017, 00, 01, 22, 30);
-var f4 = new Date(2017, 00, 01);
+var f1 = new Date(2017, 00, 01, 22, 30, 00, 999);  // 1 Enero de 2017, 22:30:00.999
+var f2 = new Date(2017, 00, 01, 22, 30, 00);       // 1 Enero de 2017, 22:30:00
+var f3 = new Date(2017, 00, 01, 22, 30);           // 1 Enero de 2017, 22:30:00
+var f4 = new Date(2017, 00, 01);                   // 1 Enero de 2017, 00:00:00
 ```
 
 Otra forma de llamar al constructor es:
@@ -406,7 +406,7 @@ var fecha = new Date("YYYY-MM-DDTHH:MI:SSZ");
 > - **En este caso Enero sí empieza en 1**.
 > - La fecha y la hora se separan con una `T` mayúscula.
 > - La hora UTC (Universal Time Coordinated) o  GMT (Greenwich Mean Time) se define con una letra mayúscula `Z`.
-> - Si se crea una fecha/hora en GMT, la fecha y la hora se convertirán a la hora local del usuario.
+> - **Si se crea una fecha/hora en GMT, la fecha y la hora se convertirán a la hora local del usuario**.
 > - Para indicar otra zona horaria deberemos sustituir la letra Z por +HH:MI o -HH:MI 
 
 ```javascript 
