--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -421,8 +421,24 @@ var f4 = new Date("2017-01-01T23:30:00Z");        // Hora de Londres y Canarias,
 
 ## RegExp
 
+## Objetos del navegador
+
+```javascript
+navigator.geolocation
+         .getCurrentPosition( position => { console.log ( position.coords.latitude + ', ' + position.coords.longitude ) } );
+```
 
 
+```javascript
+function getLocation() {
+    if (navigator.geolocation) 
+      return navigator.geolocation.getCurrentPosition( 
+                position => { console.log ( position.coords.latitude + ', ' + position.coords.longitude ) }  
+                );
+    else
+      return "Geolocation is not supported by this browser.";
+}
+```
 
 # Referencias
 
