--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -185,6 +185,17 @@ for (var i in persona)  console.log (i + " ---> " + persona[i]);
 
 # Funciones
 
+```javascript
+// Función con nombre
+function suma (a, b) { return a + b; }
+
+// Funciones anónimas, asignadas a una variable
+var suma = function (a, b) { return a + b; }  
+var suma = (a, b) => { return a + b; }        // expresada en forma de función flecha
+var suma = (a, b) => a + b;                   // expresada en forma de función flecha, simplificando return
+
+typeof suma;  // "function"
+```
 
 # Objetos
 
