--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -232,19 +232,105 @@ var h = {};              // objeto object
 
 ## Arrays
 
-**Algunos métodos interesantes**
-
 ```javascript
 var numeros = []; 
 
 numeros.lenght;                       // 0
+```
 
-numeros.push (100);                   // [ 100 ]
-numeros.push (20, 10);                // [ 100, 20, 10 ]
+### Añadir elementos
 
-var n = numeros.push (1, 1, 2, 2, 2); // [ 100, 20, 10, 1, 1, 2, 2, 2 ],  n=8 ( es la longitud )
-var z = numeros.pop ();               // [ 100, 20, 10, 1, 1, 2, 2 ],  z=2 ( es el elemento extraido )
+- Al final del array:  `push`
+- Al principio del array: `unshift`
+- En cualquier posición: `splice`
 
+**Al final del array**
+```javascript
+numeros.push (100, 20, 10);           // [ 100, 20, 10 ]
+
+var n = numeros.push (1, 1, 2, 2, 3); // [ 100, 20, 10, 1, 1, 2, 2, 3 ],  n=8 ( es la longitud )
+```
+
+**Al principio del array**
+
+```javascript
+var n = numeros.unshift (50, 40, 30); // [50, 40, 30, 100, 20, 10, 1, 1, 2, 2, 3] n=11 ( es la longitud)
+```
+
+**En cualquier posición**
+
+```javascript
+// el método splice tiene la siguiente forma:
+// array.splice (pos_inicio, cantidad_elementos, elemento1, elemento2, ...);
+
+numeros.splice(3, 0, 400, 300, 200);   // [50, 40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2, 3]
+
+// el parámetro cantidad_elementos indica la cantidad de items a eliminar.
+// en una insersión dicho parámetro debe ser 0. 
+```
+
+
+### Eliminar elementos
+
+- Al final del array:  `pop`
+- Al principio del array: `shift`
+- En cualquier posición: `splice`
+
+**Al final del array**
+
+```javascript
+var z = numeros.pop ();     // [ 50, 40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ],  z=3 ( es el elemento extraido )
+```
+
+**Al principio del array**
+
+```javascript
+var a = numeros.shift ();   // [40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ] a=50 ( es el elemento extraido)
+```
+
+
+**En cualquier posición**
+
+```javascript
+var extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , extraido = [ 400, 300, 200 ]
+```
+
+> NOTA: con los métodos `pop` y `shift` sólo puede extraerse un elemento cada vez. 
+
+> ACTIVIDAD PROPUESTA:
+>  
+>  - ¿Qué método utilizaremos para insertar un elemento al principio del array?
+>  - ¿Qué método utilizaremos para extraer un elemento del principio del array?
+>  
+>  Puedes consultar [este enlace](https://www.w3schools.com/jsref/jsref_obj_array.asp)
+  
+
+### Hacer una copia de un array
+
+```javascript
+// el método slice tiene la siguiente forma:
+// array.slice (pos_inicio, pos_final);   //  
+
+var nuevo = numeros.slice();              // todos los elementos
+var trozo = numeros.slice(1, 3);          // desde elemento segundo hasta el cuarto, sin incluir este último
+```
+
+> NOTA: el código `var nuevo = numeros`, no hace una copia. 
+>
+> Simplemente crea una referencia o "alias" llamado `nuevo` que apunta al mismo sitio que `numeros`.
+> Cualquier cambio en el array se ve reflejado en ambas variables.
+>
+>```javascript
+>var numeros = [ 1, 2, 3 ];
+>var nuevo = numeros;
+>
+>numeros.pop();      // nuevo = [ 1, 2 ] 
+>```
+
+
+### Ordenar elementos
+
+```javascript
 numeros.sort();                       // [1, 1, 10, 100, 2, 2, 20]
 numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 ```
@@ -260,13 +346,7 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 >// function(a, b){return a-b} ) es la función que se usará para comparar dos valores.
 >```
 
-> ACTIVIDAD PROPUESTA:
->  
->  - ¿Qué método utilizaremos para insertar un elemento al principio del array?
->  - ¿Qué método utilizaremos para extraer un elemento del principio del array?
->  
->  Puedes consultar [este enlace](https://www.w3schools.com/jsref/jsref_obj_array.asp)
-  
+
 Tres métodos muy interesantes para trabajar con arrays, y para objetos también, son:
 
 - `map` : Realiza una operación para cada uno de los elementos
@@ -309,6 +389,8 @@ suma = numeros.reduce ( (previo, actual) => previo + actual,  0);
 >    resultado = filtrados.reduce ( (previo, actual) => previo + actual,  10);
 >    resultado = filtrados.reduce ( (previo, actual) => previo * actual,  1);
 >```
+
+ 
 
 
 ## Encadenamiento de métodos
@@ -432,7 +514,13 @@ var f4 = new Date("2017-01-01T23:30:00Z");        // Hora de Londres y Canarias,
 
 ## RegExp
 
-## Objetos del navegador
+## Objetos predefinidos
+
+Los principales documentos predefinidos son:
+
+- navigator
+- window
+- document
 
 ```javascript
 navigator.geolocation
