--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -69,7 +69,7 @@ Ejemplo usando `template string`
 var x = 5;
 
 console.log ( `La variable 'x' vale ${x} unidades` );
-console.log ( `El cubo de 'x' es ${Math.pow(5,3)} unidades` );
+console.log ( `El cubo de 'x' es ${Math.pow(x,3)} unidades` );
 ```
 
 Ejemplo tradicional usando operador de concatenación `+`
@@ -78,7 +78,7 @@ Ejemplo tradicional usando operador de concatenación `+`
 var x = 5;
 
 console.log ( "La variable 'x' vale "  + x + " unidades" );
-console.log ( "El cubo de 'x' es " + Math.pow(5,3) + " unidades" );
+console.log ( "El cubo de 'x' es " + Math.pow(x,3) + " unidades" );
 ```
 
 
@@ -100,7 +100,7 @@ console.log ( c + parseInt(a) );   // 62
 console.log ( a + b );             // 1223.01
 console.log ( c + parseFloat(b) ); // 73.01 
 
-c.toString();       // "50" es string
+c.toString();                      // "50", es string
 ```
 
 > ACTIVIDAD PROPUESTA: Ejecuta las siguientes sentencias y explica que hacen:
@@ -147,14 +147,14 @@ a = [ 100, 200, 23 ];
 typeof a;              // object
 a instanceof Array;    // true 
 
-a = [ 100, "jola", true ]; 
+a = [ 100, "hola", true ]; 
 
 typeof a;              // object
 a instanceof Array;    // true
 
 // Los elementos están indexados, empezando en 0
 a[0]   // 100
-a[1]   // "jola"
+a[1]   // "hola"
 a[2]   // true
 
 // para mostrarlos por pantalla con bucle for in
@@ -279,13 +279,13 @@ numeros.splice(3, 0, 400, 300, 200);   // [50, 40, 30, 400, 300, 200, 100, 20, 1
 **Al final del array**
 
 ```javascript
-var z = numeros.pop ();     // [ 50, 40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ],  z=3 ( es el elemento extraido )
+var z = numeros.pop ();   // [ 50, 40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ],  z=3 ( es el elemento extraido )
 ```
 
 **Al principio del array**
 
 ```javascript
-var a = numeros.shift ();   // [40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ] a=50 ( es el elemento extraido)
+var a = numeros.shift (); // [40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ], a=50 ( es el elemento extraido)
 ```
 
 
@@ -297,19 +297,13 @@ var extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , 
 
 > NOTA: con los métodos `pop` y `shift` sólo puede extraerse un elemento cada vez. 
 
-> ACTIVIDAD PROPUESTA:
->  
->  - ¿Qué método utilizaremos para insertar un elemento al principio del array?
->  - ¿Qué método utilizaremos para extraer un elemento del principio del array?
->  
->  Puedes consultar [este enlace](https://www.w3schools.com/jsref/jsref_obj_array.asp)
-  
+
 
 ### Hacer una copia de un array
 
 ```javascript
 // el método slice tiene la siguiente forma:
-// array.slice (pos_inicio, pos_final);   //  
+// array.slice (pos_inicio, pos_final);     
 
 var nuevo = numeros.slice();              // todos los elementos
 var trozo = numeros.slice(1, 3);          // desde elemento segundo hasta el cuarto, sin incluir este último
@@ -326,6 +320,13 @@ var trozo = numeros.slice(1, 3);          // desde elemento segundo hasta el cua
 >
 >numeros.pop();      // nuevo = [ 1, 2 ] 
 >```
+
+
+> ACTIVIDAD PROPUESTA:
+>
+> - ¿Qué método se utiliza para convertir un array a texto? Pon un ejemplo.
+> - ¿Qué método se utiliza para concatenar 2 arrays? Pon un ejemplo.
+
 
 
 ### Ordenar elementos
@@ -346,6 +347,7 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 >// function(a, b){return a-b} ) es la función que se usará para comparar dos valores.
 >```
 
+### Tratar los elementos
 
 Tres métodos muy interesantes para trabajar con arrays, y para objetos también, son:
 
