--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -295,7 +295,7 @@ var a = numeros.shift (); // [40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ], 
 var extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , extraido = [ 400, 300, 200 ]
 ```
 
-> NOTA: con los métodos `pop` y `shift` sólo puede extraerse un elemento cada vez. 
+> NOTA: los métodos `pop` y `shift` sólo pueden extraer un elemento cada vez. 
 
 
 
@@ -531,6 +531,7 @@ navigator.geolocation
 
 
 ```javascript
+// Igual al anterior, guardado en una función y comprobando previamente el soporte del navegador
 function getLocation() {
     if (navigator.geolocation) 
       return navigator.geolocation.getCurrentPosition( 
@@ -540,6 +541,24 @@ function getLocation() {
       return "Geolocation is not supported by this browser.";
 }
 ```
+
+
+# DOM
+
+```javascript
+var list = document.getElementById('list');
+
+for (let i = 1; i <= 5; i++) {
+  let item = document.createElement('li');
+  item.appendChild(document.createTextNode('Item ' + i));
+
+  item.onclick = function(ev) {
+    console.log('Item ' + i + ' is clicked.');
+  };
+  list.appendChild(item);
+}
+```
+
 
 # Referencias
 
