--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -11,9 +11,10 @@
 
 # Tipos de datos primitivos simples
 
-- Números (enteros y reales)
+- Números: enteros y reales.
 - Texto
 - Booleanos
+- Símbolos (incorporados en ES6)
 
 
 ```javascript
@@ -40,6 +41,9 @@ typeof a;   // boolean
 
 a = "hola mundo";
 typeof a;   // string
+
+a = Symbol('foo');
+typeof a;   // symbol
 ``` 
 
 
@@ -183,6 +187,7 @@ persona.altura   // 170
 for (var i in persona)  console.log (i + " ---> " + persona[i]);
 ```
 
+
 # Funciones
 
 ```javascript
@@ -299,7 +304,7 @@ var extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , 
 
 
 
-### Hacer una copia de un array
+### Hacer copia de un array
 
 ```javascript
 // el método slice tiene la siguiente forma:
@@ -516,9 +521,33 @@ var f4 = new Date("2017-01-01T23:30:00Z");        // Hora de Londres y Canarias,
 
 ## RegExp
 
+
+## Hacer copia de un objeto
+
+
+```javascript
+var persona = { nombre:"José",  edad:30,  altura:170 };
+
+// var p = persona.clone();
+var p = Object.assign({}, persona);  // shallow copy (copia superficial)
+//????                                 // deep copy (copia profunda)
+//copia de objetos JSON?
+```
+
+> NOTA: el código `var p = persona`, no hace una copia. 
+>
+> Simplemente crea una referencia o "alias" llamado `p` que apunta al mismo sitio que `persona`.
+> Cualquier cambio en el array se ve reflejado en ambas variables.
+>
+>```javascript
+>
+>var p = persona;
+>persona.peso = 100;  // p = {nombre: "José", edad: 30, altura: 170, peso: 100}
+>```
+
 ## Objetos predefinidos
 
-Los principales documentos predefinidos son:
+Los principales objetos predefinidos son:
 
 - navigator
 - window
