--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -537,7 +537,7 @@ var p = Object.assign({}, persona);  // shallow copy (copia superficial)
 > NOTA: el código `var p = persona`, no hace una copia. 
 >
 > Simplemente crea una referencia o "alias" llamado `p` que apunta al mismo sitio que `persona`.
-> Cualquier cambio en el array se ve reflejado en ambas variables.
+> Cualquier cambio en el objeto se ve reflejado en ambas variables.
 >
 >```javascript
 >
