--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -1,1 +1,13 @@
+# Funciones 
 
+```javascript
+// Función con nombre
+function suma (a, b) { return a + b; }
+
+// Funciones anónimas, asignadas a una variable
+var suma = function (a, b) { return a + b; }  
+var suma = (a, b) => { return a + b; }        // expresada en forma de función flecha
+var suma = (a, b) => a + b;                   // expresada en forma de función flecha, simplificando return
+
+typeof suma;  // "function"
+```
