--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -1,13 +1,59 @@
-# Funciones 
+# Definición e invocación 
 
 ```javascript
-// Función con nombre
-function suma (a, b) { return a + b; }
+function suma (a, b) { return a + b; }     // Declaración o definición
 
-// Funciones anónimas, asignadas a una variable
-var suma = function (a, b) { return a + b; }  
-var suma = (a, b) => { return a + b; }        // expresada en forma de función flecha
-var suma = (a, b) => a + b;                   // expresada en forma de función flecha, simplificando return
+suma (2, 3);                               // Llamada o invocación
 
 typeof suma;  // "function"
+```
+
+A tener en cuenta:
+
+- En la **declaración** de una función indicamos los **parámetros** formales, si los tiene. En este caso `a` y `b`.
+- En la **llamada** a la función indicamos los parámetros reales o **argumentos**. En este caso `2`y `3`.
+
+
+# Funciones anónimas
+
+- No tienen nombre, así que **en principio no son invocables**.
+- Suelen utilizarse en circunstancias donde sólo se invoca a dicha función una única vez.
+
+```javascript
+// forma tradicional
+function (a, b) { return a + b; }  // ¿Cómo hago una llamada a esta función??     
+
+// forma de función flecha 
+(a, b) => { return a + b; }        // expresada en forma de función flecha
+(a, b) => a + b;                   // expresada en forma de función flecha, simplificando return
+```
+
+# Formas de ejecutar una función anónima
+
+## Mediante una expresión
+
+- Es una forma de declarar e invocar una función, todo en un sólo paso.
+- La declaración de la función se encierra entre paréntesis  `( )`
+- A continuación los argumentos también se encierran entre paréntesis `( )`
+
+```javascript
+(function (a, b) { return a + b; })  (2, 3);                 
+```
+
+## A través de una variable asociada
+
+```javascript
+var suma = function (a, b) { return a + b; }  // puedo asignarla a una variable
+
+suma (2, 3);                                  // ahora sí puedo invocar la función a través de la variable asociada
+```
+
+## En un callback
+
+```javascript
+setTimeout ( function (a,b) { alert (a + b); } // función a ejecutar
+             , 3000                            // milisegundos a esperar antes de ejecutar la función
+             , 2                               // primer argumento de la función  
+             , 3                               // segundo argumento de la función
+            );  
 ```
