--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -43,9 +43,9 @@ function (a, b) { return a + b; }  // ¿Cómo hago una llamada a esta función??
 ## A través de una variable asociada
 
 ```javascript
-var suma = function (a, b) { return a + b; }  // puedo asignarla a una variable
+var suma = function (a, b) { return a + b; } ; // puedo asignarla a una variable
 
-suma (2, 3);                                  // ahora sí puedo invocar la función a través de la variable asociada
+suma (2, 3);                                   // ahora sí puedo invocar la función a través de la variable asociada
 ```
 
 ## En un callback
@@ -55,5 +55,5 @@ setTimeout ( function (a,b) { alert (a + b); } // función a ejecutar
              , 3000                            // milisegundos a esperar antes de ejecutar la función
              , 2                               // primer argumento de la función  
              , 3                               // segundo argumento de la función
-            );  
+           ) ;  
 ```
